tests/semantic/pass/var-6.tiger
let
	var a := ""
in
	a := ""
end
