tests/semantic/fail/function-11.tiger
let
	function a () = ()
in
	a
end
